// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rails retained-fact complete-output parity > preserves conventional controller and method resolution 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.show:method:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/controllers/health_controller.rb",
      "id": "edge:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController%3Aclass%3A0:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController.show%3Amethod%3A0:contains:2:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 6,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "show",
      "resolution": "exact",
      "sourceId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
      "targetId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.show:method:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
        ],
        "ruleId": "language.ruby.v1_6.direct-declaration.containment",
        "stage": "syntax",
      },
      "filePath": "app/controllers/health_controller.rb",
      "id": "edge:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Afile%3A0:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController%3Aclass%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 4,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "HealthController",
      "resolution": "exact",
      "sourceId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb:file:0",
      "targetId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.show:method:0",
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
        ],
        "resolutionPath": [
          "config/routes.rb",
          "app/controllers/health_controller.rb",
        ],
        "ruleId": "framework.rails.direct-routes-draw.literal-controller-action.conventional-file-class-method",
        "stage": "module",
      },
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController.show%3Amethod%3A0:routes:2:3",
      "kind": "routes",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "health#show",
      "resolution": "exact",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
      "targetId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.show:method:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
        ],
        "ruleId": "language.ruby.v1_6_1.rails.direct-routes-draw.literal-registration.containment",
        "stage": "syntax",
      },
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%3Afile%3A0:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:contains:2:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "GET /health",
      "resolution": "exact",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb:file:0",
      "targetId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
    },
  ],
  "files": [
    {
      "contentHash": "e8774754664a475951f3f529eefc6cfaa9d9baf2c943fc5aa9b18ff371fc096b",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "ruby",
      "path": "app/controllers/health_controller.rb",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "1684bc8bab9ff5fe0b104d3c58c7cb0de46ce9ab587b4a8da75de1a03721dba2",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "ruby",
      "path": "config/routes.rb",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "app/controllers/health_controller.rb",
      "id": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.show:method:0",
      "isExported": true,
      "kind": "method",
      "name": "show",
      "qualifiedName": "app/controllers/health_controller.rb#HealthController.show",
      "range": {
        "end": {
          "column": 6,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/controllers/health_controller.rb",
      "id": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
      "isExported": true,
      "kind": "class",
      "name": "HealthController",
      "qualifiedName": "app/controllers/health_controller.rb#HealthController",
      "range": {
        "end": {
          "column": 4,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/controllers/health_controller.rb",
      "id": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb:file:0",
      "isExported": true,
      "kind": "file",
      "name": "health_controller.rb",
      "qualifiedName": "app/controllers/health_controller.rb",
      "range": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "config/routes.rb",
      "id": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
      "isExported": false,
      "kind": "route",
      "name": "GET /health",
      "qualifiedName": "config/routes.rb#route:GET /health",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "config/routes.rb",
      "id": "symbol:config%2Froutes.rb:config%2Froutes.rb:file:0",
      "isExported": true,
      "kind": "file",
      "name": "routes.rb",
      "qualifiedName": "config/routes.rb",
      "range": {
        "end": {
          "column": 1,
          "line": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`Rails retained-fact complete-output parity > preserves missing action nonclaim 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.other:method:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/controllers/health_controller.rb",
      "id": "edge:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController%3Aclass%3A0:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController.other%3Amethod%3A0:contains:2:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 6,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "other",
      "resolution": "exact",
      "sourceId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
      "targetId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.other:method:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
        ],
        "ruleId": "language.ruby.v1_6.direct-declaration.containment",
        "stage": "syntax",
      },
      "filePath": "app/controllers/health_controller.rb",
      "id": "edge:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Afile%3A0:symbol%3Aapp%252Fcontrollers%252Fhealth_controller.rb%3Aapp%252Fcontrollers%252Fhealth_controller.rb%2523HealthController%3Aclass%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 4,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "HealthController",
      "resolution": "exact",
      "sourceId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb:file:0",
      "targetId": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
    },
    {
      "confidence": 0,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
        ],
        "ruleId": "framework.rails.direct-routes-draw.literal-controller-action.unresolved-controller-method",
        "stage": "unresolved",
      },
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:health%23show:routes:2:3",
      "kind": "routes",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "health#show",
      "resolution": "unresolved",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
      "targetId": null,
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
        ],
        "ruleId": "language.ruby.v1_6_1.rails.direct-routes-draw.literal-registration.containment",
        "stage": "syntax",
      },
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%3Afile%3A0:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:contains:2:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "GET /health",
      "resolution": "exact",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb:file:0",
      "targetId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
    },
  ],
  "files": [
    {
      "contentHash": "5a2aeb656831a3d935a6de2d20ec56929a914dc591d12d3d45bdfb59503b6569",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "ruby",
      "path": "app/controllers/health_controller.rb",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "1684bc8bab9ff5fe0b104d3c58c7cb0de46ce9ab587b4a8da75de1a03721dba2",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "ruby",
      "path": "config/routes.rb",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [
    {
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:health%23show:routes:2:3",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "health#show",
      "relationKind": "routes",
      "routeFramework": "rails",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
    },
  ],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "app/controllers/health_controller.rb",
      "id": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController.other:method:0",
      "isExported": true,
      "kind": "method",
      "name": "other",
      "qualifiedName": "app/controllers/health_controller.rb#HealthController.other",
      "range": {
        "end": {
          "column": 6,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/controllers/health_controller.rb",
      "id": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb%23HealthController:class:0",
      "isExported": true,
      "kind": "class",
      "name": "HealthController",
      "qualifiedName": "app/controllers/health_controller.rb#HealthController",
      "range": {
        "end": {
          "column": 4,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/controllers/health_controller.rb",
      "id": "symbol:app%2Fcontrollers%2Fhealth_controller.rb:app%2Fcontrollers%2Fhealth_controller.rb:file:0",
      "isExported": true,
      "kind": "file",
      "name": "health_controller.rb",
      "qualifiedName": "app/controllers/health_controller.rb",
      "range": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "config/routes.rb",
      "id": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
      "isExported": false,
      "kind": "route",
      "name": "GET /health",
      "qualifiedName": "config/routes.rb#route:GET /health",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "config/routes.rb",
      "id": "symbol:config%2Froutes.rb:config%2Froutes.rb:file:0",
      "isExported": true,
      "kind": "file",
      "name": "routes.rb",
      "qualifiedName": "config/routes.rb",
      "range": {
        "end": {
          "column": 1,
          "line": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`Rails retained-fact complete-output parity > preserves missing controller nonclaim 1`] = `
{
  "edges": [
    {
      "confidence": 0,
      "evidence": {
        "candidateSymbolIds": [],
        "ruleId": "framework.rails.direct-routes-draw.literal-controller-action.unresolved-controller-method",
        "stage": "unresolved",
      },
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:health%23show:routes:2:3",
      "kind": "routes",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "health#show",
      "resolution": "unresolved",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
      "targetId": null,
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
        ],
        "ruleId": "language.ruby.v1_6_1.rails.direct-routes-draw.literal-registration.containment",
        "stage": "syntax",
      },
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%3Afile%3A0:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:contains:2:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "GET /health",
      "resolution": "exact",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb:file:0",
      "targetId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
    },
  ],
  "files": [
    {
      "contentHash": "1684bc8bab9ff5fe0b104d3c58c7cb0de46ce9ab587b4a8da75de1a03721dba2",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "ruby",
      "path": "config/routes.rb",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [
    {
      "filePath": "config/routes.rb",
      "id": "edge:symbol%3Aconfig%252Froutes.rb%3Aconfig%252Froutes.rb%2523route%253AGET%2520%252Fhealth%3Aroute%3A0:health%23show:routes:2:3",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "referenceName": "health#show",
      "relationKind": "routes",
      "routeFramework": "rails",
      "sourceId": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
    },
  ],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "config/routes.rb",
      "id": "symbol:config%2Froutes.rb:config%2Froutes.rb%23route%3AGET%20%2Fhealth:route:0",
      "isExported": false,
      "kind": "route",
      "name": "GET /health",
      "qualifiedName": "config/routes.rb#route:GET /health",
      "range": {
        "end": {
          "column": 35,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "config/routes.rb",
      "id": "symbol:config%2Froutes.rb:config%2Froutes.rb:file:0",
      "isExported": true,
      "kind": "file",
      "name": "routes.rb",
      "qualifiedName": "config/routes.rb",
      "range": {
        "end": {
          "column": 1,
          "line": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;
